# dvf-exploration

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/.streamlit/: config.toml
app/pages/: 1_section_evolution.py  2_map.py
data/cadastre/: put_raw_cadastre_data_here
data/dvf-data/: put_dvf_data_here
src/: core.py  loader.py  utils.py
src/app_utils/: helper.py
src/cadastres/: cadastre_processing.py  get_adjency_cadastres.py
src/dvf_processing/: clean_data.py
src/scrapping_jinka/: process_data.py  scrap.py  scrapper_utils.py
