[tool.poetry]
name = "dvf-exploration"
version = "0.1.0"
description = ""
authors = ["me"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.9.2"
polars = "^1.9.0"
pyarrow = "^20.0.0"
pandas = "^2.2.3"
case-converter = "^1.2.0"
seaborn = "^0.13.2"
ijson = "^3.4.0"
streamlit = "^1.45.1"
plotly = "^6.1.1"
tqdm = "^4.67.1"
ipywidgets = "^8.1.7"
logzero = "^1.7.0"
requests = "^2.32.3"
retrying = "^1.3.4"
shapely = "^2.1.1"
watchdog = "^6.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"